--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -44,7 +44,7 @@
 }
 .dark #header.scroll > div:first-child,
 #header.scroll.dark > div:first-child {
-  @apply bg-page md:bg-[#030621e6] border-b border-gray-500/20;
+  @apply bg-page md:bg-[rgba(10,10,10,0.8)] border-b border-gray-500/20;
   box-shadow: none;
 }
 /* #header.scroll > div:last-child {
