--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -1,22 +1,5 @@
 ---
 import '@fontsource-variable/inter';
-
-// 'DM Sans'
-// Nunito
-// Dosis
-// Outfit
-// Roboto
-// Literata
-// 'IBM Plex Sans'
-// Karla
-// Poppins
-// 'Fira Sans'
-// 'Libre Franklin'
-// Inconsolata
-// Raleway
-// Oswald
-// 'Space Grotesk'
-// Urbanist
 ---
 
 <style is:inline is:global>
@@ -29,15 +12,17 @@ import '@fontsource-variable/inter';
     --aw-color-secondary: rgb(30 58 138);
     --aw-color-accent: rgb(109 40 217);
 
-    --aw-color-text-heading: rgb(0 0 0); 
-    --aw-color-text-default: rgb(16 16 16);
+    --aw-color-text-heading: rgb(0, 0, 0);
+    --aw-color-text-default: rgb(16, 16, 16);
     --aw-color-text-muted: rgb(16 16 16 / 66%);
     --aw-color-bg-page: rgb(255 255 255);
 
-    --aw-color-bg-page-dark: rgb(3 6 32);
+    --aw-color-bg-page-dark: rgb(13, 14, 18);
 
-    ::selection {background-color: lavender;}
-
+    --aw-color-boxes: rgb(214, 221, 227);
+    ::selection {
+      background-color: lavender;
+    }
   }
 
   .dark {
@@ -49,12 +34,16 @@ import '@fontsource-variable/inter';
     --aw-color-secondary: rgb(30 58 138);
     --aw-color-accent: rgb(109 40 217);
 
-    --aw-color-text-heading: rgb(0 0 0); 
+    --aw-color-text-heading: rgb(0, 0, 0);
     --aw-color-text-default: rgb(229 236 246);
     --aw-color-text-muted: rgb(229 236 246 / 66%);
     --aw-color-bg-page: var(--aw-color-bg-page-dark);
 
-    ::selection {background-color: black; color: snow}
+    --aw-color-boxes: rgb(22, 22, 22);
 
+    ::selection {
+      background-color: black;
+      color: snow;
+    }
   }
 </style>
