--- a/src/components/widgets/Note.astro
+++ b/src/components/widgets/Note.astro
@@ -2,10 +2,10 @@
 import { Icon } from 'astro-icon/components';
 ---
 
-<section class="bg-blue-50 dark:bg-slate-800 not-prose">
+<section class="bg-blue-50 dark:bg-zinc-950 not-prose">
   <div class="max-w-6xl mx-auto px-4 sm:px-6 py-4 text-md text-center font-medium">
     <span class="font-bold">
-      <Icon name="tabler:info-square" class="w-5 h-5 inline-block align-text-bottom" /> Philosophy:</span
-    > Simplicity, Best Practices and High Performance
+      <Icon name="tabler:info-square" class="w-5 h-5 inline-block align-text-bottom text-violet-600" /> Aviso:</span
+    > As monitorias estão suspensas até o início do próximo semestre.
   </div>
 </section>
