--- a/src/components/blog/SinglePost.astro
+++ b/src/components/blog/SinglePost.astro
@@ -98,14 +98,14 @@ const { Content } = post;
    *  at the top */
   function createProgressBar() {
     // Create the main container div
-    const progressContainer = document.createElement("div");
+    const progressContainer = document.createElement('div');
     progressContainer.className =
-      "progress-container fixed top-0 z-40 h-1 w-full bg-violet-100 dark:bg-dark overflow-hidden";
+      'progress-container fixed top-0 z-40 h-1 w-full bg-violet-100 dark:bg-dark overflow-hidden';
 
     // Create the progress bar div
-    const progressBar = document.createElement("div");
-    progressBar.className = "progress-bar h-1 w-0 bg-accent";
-    progressBar.id = "myBar";
+    const progressBar = document.createElement('div');
+    progressBar.className = 'progress-bar h-1 w-0 bg-accent';
+    progressBar.id = 'myBar';
 
     // Append the progress bar to the progress container
     progressContainer.appendChild(progressBar);
@@ -118,18 +118,15 @@ const { Content } = post;
   /** Update the progress bar
    *  when user scrolls */
   function updateScrollProgress() {
-    const winScroll =
-      document.body.scrollTop || document.documentElement.scrollTop;
-    const height =
-      document.documentElement.scrollHeight -
-      document.documentElement.clientHeight;
+    const winScroll = document.body.scrollTop || document.documentElement.scrollTop;
+    const height = document.documentElement.scrollHeight - document.documentElement.clientHeight;
     const scrolled = (winScroll / height) * 120;
     if (document) {
-      const myBar = document.getElementById("myBar");
+      const myBar = document.getElementById('myBar');
       if (myBar) {
-        myBar.style.width = scrolled + "%";
+        myBar.style.width = scrolled + '%';
       }
     }
   }
-  document.addEventListener("scroll", updateScrollProgress);
+  document.addEventListener('scroll', updateScrollProgress);
 </script>
