--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -2,6 +2,7 @@
 import { Icon } from 'astro-icon/components';
 import { SITE } from '~/utils/config';
 import { getHomePermalink } from '~/utils/permalinks';
+import Favicon from '~/assets/favicons/favicon.svg';
 
 interface Link {
   text?: string;
@@ -32,6 +33,7 @@ const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme 
     <div class="grid grid-cols-12 gap-4 gap-y-8 sm:gap-8 py-8 md:py-12">
       <div class="col-span-12 lg:col-span-4">
         <div class="mb-2">
+          <img src={Favicon.src} alt="icone" class="w-10 h-10" />
           <a class="inline-block font-bold text-xl" href={getHomePermalink()}>{SITE?.name}</a>
         </div>
         <div class="text-sm text-muted">
