--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -18,7 +18,7 @@ const { metadata } = Astro.props;
   <slot name="header">
     <Header {...headerData} isSticky showToggleTheme />
   </slot>
-  <main>
+  <main class="">
     <slot />
   </main>
   <slot name="footer">
