--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ const metadata = {
     <Fragment slot="subtitle">
       Projeto do
       <span class="hidden xl:inline">Instituto Federal Farroupilha Campus Frederico Westphalen</span>
-      <span class="inline xl:hidden">IFFar FW</span>
+      <span class="inline xl:hidden">IFFar-FW</span>
       que tem como objetivo incentivar a prática de programação e a resolução de problemas.
     </Fragment>
   </Hero>
