Oficina Introdução ao Git

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from '~/layouts/PageLayout.astro';
 
 import Hero from '~/components/widgets/Hero.astro';
-import Note from '~/components/widgets/Note.astro';
+// import Note from '~/components/widgets/Note.astro';
 import Features from '~/components/widgets/Features.astro';
 import Steps from '~/components/widgets/Steps.astro';
 import Content from '~/components/widgets/Content.astro';
@@ -47,7 +47,7 @@ const metadata = {
   </Hero>
 
   <!-- Note Widget ******************* -->
-  <Note />
+  <!-- <Note /> -->
 
   <!-- Features Widget *************** -->
   <Features
@@ -240,7 +240,7 @@ const metadata = {
       {
         variant: 'primary',
         text: 'Acessar',
-        href: 'https://github.com/',
+        href: 'https://github.com/dbreskovit/A-Hora-do-Codigo',
         target: '_blank',
         icon: 'tabler:brand-github',
       },
