--- a/src/pages/landing/dicas-bugcup.astro
+++ b/src/pages/landing/dicas-bugcup.astro
@@ -13,10 +13,17 @@ const metadata = {
     tagline="Dicas BugCup"
     title="Dicas para você se dar bem no BugCup"
     subtitle="Confira algumas dicas para você se dar bem no BugCup e garantir sua vaga na próxima etapa."
-    actions={[{ variant: 'primary', text: 'Inscreva-se', href: 'https://abre.ai/oficinabugcup24', icon: 'tabler:square-rounded-arrow-right' }]}
+    actions={[
+      {
+        variant: 'primary',
+        text: 'Acessar Material',
+        href: 'https://github.com/marcobabinski/oficina-bugcup-24',
+        icon: 'tabler:brand-github',
+      },
+    ]}
     image={{
-      src: 'https://scontent.fpoa45-1.fna.fbcdn.net/v/t39.30808-6/326763682_1977734185944674_5769586281981774138_n.png?_nc_cat=108&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeFtiWXKZDLmj0ABVzeE8Gmm9Huy2KDZBAL0e7LYoNkEAn4CNipcbohQw2vI3VmSsVdxdhAyYYL3d0GBXuLKlOud&_nc_ohc=XylQMMwvXJ4Q7kNvgFgayG-&_nc_ht=scontent.fpoa45-1.fna&oh=00_AYB-CxLnpUWKOpsV-2-Aixe5c0VYAH54jqskEF_pXEd7sg&oe=66CBFE45',
-      alt: 'Store with a Coming Soon sign. Pre-launch Landing Page',
+      src: '/images/bug.png',
+      alt: 'Imagem do logo da BugCup',
     }}
   />
 </Layout>
