--- a/src/layouts/LandingLayout.astro
+++ b/src/layouts/LandingLayout.astro
@@ -22,8 +22,8 @@ const { metadata } = Astro.props;
         links={headerData?.links[2] ? [headerData.links[2]] : undefined}
         actions={[
           {
-            text: 'Download',
-            href: 'https://github.com/onwidget/astrowind',
+            text: 'Repositório',
+            href: 'https://github.com/dbreskovit/A-Hora-do-Codigo'
           },
         ]}
         showToggleTheme
