--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ const metadata = {
     isBoxed
   >
     <Fragment slot="title">
-      <span class="hidden sm:inline"> A Hora do Código: </span> Não Entre em Pânico, Comece a <span
+      <span class="hidden sm:inline"> Hora do Código: </span> Não Entre em Pânico, Comece a <span
         class="text-accent dark:text-white highlight"
       >
         Programar</span
