--- a/src/pages/landing/git-essentials.astro
+++ b/src/pages/landing/git-essentials.astro
@@ -16,9 +16,9 @@ const metadata = {
     actions={[
       {
         variant: 'primary',
-        text: 'Inscreva-se',
-        href: 'https://abre.ai/oficinagit24',
-        icon: 'tabler:square-rounded-arrow-right'
+        text: 'Acessar Material',
+        href: 'https://drive.google.com/file/d/12UjuglGCDLTfGVzeaqPK6KP5rH25QTb-/view?usp=sharing',
+        icon: 'tabler:brand-google-drive',
       },
     ]}
     image={{
