--- a/src/pages/landing/python-essentials.astro
+++ b/src/pages/landing/python-essentials.astro
@@ -15,10 +15,14 @@ const metadata = {
     subtitle="Aprenda os conceitos básicos de programação com Python e como utilizá-lo para resolver problemas."
     actions={[
       {
+        // variant: 'primary',
+        // text: 'Inscreva-se',
+        // href: 'https://abre.ai/oficinapython24',
+        // icon: 'tabler:square-rounded-arrow-right'
         variant: 'primary',
-        text: 'Inscreva-se',
-        href: 'https://abre.ai/oficinapython24',
-        icon: 'tabler:square-rounded-arrow-right'
+        text: 'Acessar Material',
+        href: '#',
+        icon: 'tabler:brand-google-drive',
       },
     ]}
     image={{
